# gateway/api/router.go
@@ -19,7 +19,8 @@ func NewRouter() *gin.Engine {
 	v1 := router.Group("/api/v1")
 	{
 		v1.GET("/test", controllers.Test)
-
+		v1.POST("/register", controllers.UserRegister)
+		v1.POST("/login", controllers.UserLogin)
 	}
 
 	return router
