# user/model/user.go
@@ -1,0 +1,34 @@
+package model
+
+import (
+	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
+)
+
+type User struct {
+	gorm.Model
+	Username string `gorm:"unique"`
+	Password string
+}
+
+const (
+	PasswordCost = 12
+)
+
+// 加密密码
+func (user *User) SetPassword(password string) error {
+	bytes, err := bcrypt.GenerateFromPassword([]byte(password), PasswordCost)
+	if err != nil {
+		return err
+	}
+
+	user.Password = string(bytes)
+	return nil
+}
+
+// 校验密码
+func (user *User) VerifyPassword(password string) bool {
+	err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(password))
+
+	return err == nil
+}
